// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`inline diff options: { expand: false } 1`] = `
[
  "- Expected
+ Received

@@ -1,6 +1,6 @@
- here
+
  a
  b
  c
  d
  e
@@ -14,11 +14,11 @@
  a
  b
  c
  d
  e
- and
+
  a
  b
  c
  d
  e
@@ -32,6 +32,6 @@
  a
  b
  c
  d
  e
- there
+",
]
`;

exports[`inline diff options: undefined 1`] = `
[
  "- Expected
+ Received

- here
+
  a
  b
  c
  d
  e

  a
  b
  c
  d
  e

  a
  b
  c
  d
  e
- and
+
  a
  b
  c
  d
  e

  a
  b
  c
  d
  e

  a
  b
  c
  d
  e
- there
+",
]
`;
